# adult-media-flagger

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
review-app/: dev.js  index.html  package.json  pnpm-lock.yaml  server.js  vite.config.js
review-app/public/: styles.css
review-app/src/: App.jsx
scripts/: download-r2-media.ps1  download-r2-status.ps1  find-duplicate-media.ps1  find_duplicate_media.py  process-downloaded-media.ps1  process-status.ps1  process_status.py  reconcile-db.ps1  reconcile_db.py
src/adult_media_flagger/: __init__.py  adult_detector.py  cli.py  config.py  env.py  llava.py  processor.py  r2_sync.py  scanner.py  store.py  video_frames.py
tests/: test_config.py  test_r2_sync.py  test_video_frames.py
