[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adult-media-flagger"
version = "0.1.0"
description = "Local adult-content flagging pipeline for image and video archives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
  "opennsfw2>=0.10.2",
]
dev = [
  "pytest>=8.0",
]
r2 = [
  "boto3>=1.34",
]

[project.scripts]
adult-flag = "adult_media_flagger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
